samples/_failures_safe/1761534388_d8fd3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec923a2b.c: In function ‘main’:
./samples/SAFE/__tmp_ec923a2b.c:144:17: error: expected declaration or statement at end of input
  144 |                 case 2: printf("WARNING"); break;
      |                 ^~~~
./samples/SAFE/__tmp_ec923a2b.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec923a2b.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec923a2b.c:144:17: error: expected declaration or statement at end of input
